remove stuff that's not needed anymore

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <nav class="mt-0 pt-0 mb-0 pb-0 navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
+                <!--Test the light one some time soon-->
                 <img src="/ytdiff/assets/favicon.ico" alt="" width="30" height="30"
                     class="d-inline-block align-text-top"><span>-diff</span>
             </a>
