ths is a basic working model, rice it later

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <!--Test the light one some time soon-->
-                <img src="/ytdiff/assets/favicon.ico" alt="" width="30" height="30"
+                <img src="/ytdiff/assets/nav.png" alt="" width="30" height="30"
                     class="d-inline-block align-text-top"><span>-diff</span>
             </a>
             <a href="http://localhost:8888/ytdiff/showdb" class="link-warning">See DB</a>
