--- a/show.html
+++ b/show.html
@@ -29,7 +29,7 @@
     <nav class="mt-0 pt-0 mb-0 pb-0 navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/ytdiff/assets/favicon.ico" alt="" width="30" height="30"
+                <img src="/ytdiff/assets/nav.png" alt="" width="30" height="30"
                     class="d-inline-block align-text-top"><span>-diff</span>
             </a>
             <a href="http://localhost:8888/ytdiff" class="link-warning">Back</a>
