--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="/ytdiff/assets/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <script src="/ytdiff/assets/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="/ytdiff/assets/socket.io.min.js" crossorigin="anonymous"></script>
+    <script src="/ytdiff/assets/client.js" crossorigin="anonymous"></script>
     <style>
         .container-table {
             height: 80vh;
@@ -29,11 +30,10 @@
     <nav class="mt-0 pt-0 mb-0 pb-0 navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <!--Test the light one some time soon-->
                 <img src="/ytdiff/assets/nav.png" alt="" width="30" height="30"
                     class="d-inline-block align-text-top"><span>-diff</span>
             </a>
-            <a href="http://localhost:8888/ytdiff/showdb" class="link-warning">See DB</a>
+            <a href="ytdiff/showdb" class="link-warning">See DB</a>
         </div>
     </nav>
     <div class="container">
@@ -60,12 +60,12 @@
 
                 <div class="row">
                     <div class="col-7">
-                        <button id="listit" type="button" onclick="send_data()" class="btn btn-primary">List</button>
+                        <button id="listit" type="button" onclick="list_it()" class="btn btn-primary">List</button>
                     </div>
                     <div class="col">
                         <div class="btn-group" role="group">
-                            <button id="next-sub" type="button" onclick="next()" class="btn btn-primary">Next</button>
-                            <button id="back-sub" type="button" onclick="back()" class="btn btn-primary">Back</button>
+                            <button id="next-sub" type="button" onclick="nextSub()" class="btn btn-primary">Next</button>
+                            <button id="back-sub" type="button" onclick="backSub()" class="btn btn-primary">Back</button>
                         </div>
                     </div>
                 </div>
@@ -76,19 +76,19 @@
                             <button id="all" type="button" onclick="select_all()" class="btn btn-primary">All</button>
                             <button id="none" type="button" onclick="select_none()"
                                 class="btn btn-primary">None</button>
-                            <button id="clear" type="button" onclick="depopulateList()"
+                            <button id="clear" type="button" onclick="depopulateList(true)"
                                 class="btn btn-primary">Clear</button>
                         </div>
                     </div>
                     <div class="col">
-                        <button id="dnld" type="button" onclick="download()" class="btn btn-primary">Download
+                        <button id="dnld" type="button" onclick="download_selected()" class="btn btn-primary">Download
                             Selected</button>
 
                     </div>
                 </div>
             </div>
             <div class="col">
-                <h3>List:</h3>
+                <h3 class="m-0">List:</h3>
                 <div class="container-table">
                     <table class="table table-responsive">
                         <thead>
@@ -101,16 +101,10 @@
                         </thead>
                         <div>
                             <tbody id="listing">
-                                <!--all items would be added here
-                                get the pagenition to work also make only the tbody
-                                scrollable not the entire table-->
                             </tbody>
                         </div>
                     </table>
                 </div>
-                <!--
-                        Add the navigation buttons here
-                    -->
             </div>
         </div>
     </div>
@@ -128,240 +122,11 @@
         window.onload = init();
         var url_global = "None";
         function init() {
-            document.getElementById("chunk").value = 10;
             document.getElementById("start").value = 0;
             document.getElementById("stop").value = 10;
+            document.getElementById("chunk").value = 10;
             sockSetup();
         }
-        function sockSetup() {
-            console.log("Sock setup started");
-            var socket = io({ path: "/ytdiff/socket.io/" });
-            socket.on('init', function (data) {
-                console.log(data.message);
-                // Respond with a message including this clients' id sent from the server
-                socket.emit('acknowledge', { data: 'Connected', id: data.id });
-            });
-            socket.on('progress', function (data) {
-                console.log(data);
-            });
-            socket.on('error', console.error.bind(console));
-            socket.on('done', function (data) {
-                console.log(data.message);
-                //alert(`Downloaded: ${data.message}`);
-                var myToastEl = document.getElementById('notify');
-                myToastEl.children[0].children[0].innerHTML = `${data.message} ✅`;
-                var myToast = new bootstrap.Toast(myToastEl, {
-                    delay: 5000
-                }); // Returns a Bootstrap toast instance
-                //myToast.dispose();
-                myToast.show();
-            });
-        }
-
-        function send_data() {
-            depopulateList();
-            var url = document.getElementById("url").value;
-            url_global = url;
-            if (document.getElementById("start").value === "") {
-                document.getElementById("start").value = 0;
-            }
-            if (document.getElementById("stop").value === "") {
-                document.getElementById("stop").value = 10;
-            }
-            var start = document.getElementById("start").value;
-            if (start == "0") {
-                start = 1; // yt-dlp doesn't start counting form 0 but sequelize does
-            }
-            var stop = document.getElementById("stop").value;
-            var chunk = document.getElementById("chunk").value;
-            const table = document.getElementById("listing");
-            console.log("URL: " + url, "Start: " + start, "Stop: " + stop, "Chunk size: " + chunk);
-            fetch("/ytdiff/list", {
-                method: "post",
-                headers: {
-                    'Accept': 'application/json',
-                    'Content-Type': 'application/json'
-                },
-
-                //make sure to serialize your JSON body
-                body: JSON.stringify({
-                    url: url,
-                    start: start,
-                    stop: stop,
-                    chunk: chunk
-                })
-            }).then((response) => response.text()).then((text) => {
-
-                console.log(text);
-                response_list = JSON.parse(text);
-                //response_list = text.slice(0, -2).split("\n").slice(0, -1);
-                console.log(response_list['rows'], response_list['rows'].length)
-                response_list['rows'].forEach(async element => {
-                    console.log(element);
-                    /*
-                        # 	Title 	Saved 	Avail.
-                    */
-                    const row = table.insertRow();
-                    const select = row.insertCell(0);
-                    const title = row.insertCell(1);
-                    const saved = row.insertCell(2);
-                    const avail = row.insertCell(3);
-
-
-                    let label = document.createElement("label");
-                    label.className = "list-group-item";
-
-                    let checkbox = document.createElement("input");
-                    checkbox.type = "checkbox";
-                    checkbox.className = "form-check-input me-1";
-                    checkbox.value = "";
-                    checkbox.id = element['id'];
-
-                    let link = document.createElement('a');
-                    link.href = element['url'];
-                    link.appendChild(document.createTextNode(element['title']));
-                    // make it so if the saved is true it should be green and if the available is false it should be red
-                    select.appendChild(checkbox);
-                    title.appendChild(link);
-                    saved.innerHTML = element['downloaded'];
-                    avail.innerHTML = element['available'];
-                    //output.appendChild(label);
-                });
-            });
-        };
-
-        function select_all() {
-            document.querySelectorAll('input[type=checkbox]').forEach(element => {
-                element.checked = true;
-            });
-        }
-        function select_none() {
-            document.querySelectorAll('input[type=checkbox]').forEach(element => {
-                element.checked = false;
-            });
-        }
-
-        function download() {
-            var id = []
-            document.querySelectorAll('input[type=checkbox]:checked')
-                .forEach(element => {
-                    id.push(element.id);
-                })
-            console.log(id);
-            fetch("/ytdiff/download", {
-                method: "post",
-                headers: {
-                    'Accept': 'application/json',
-                    'Content-Type': 'application/json'
-                },
-                //make sure to serialize your JSON body
-                body: JSON.stringify({
-                    ids: id,
-                })
-            }).then((response) => response.text()).then((text) => {
-                console.log(text);
-            });
-            //set up a websocket to check on the status although it won't be really useful
-        }
-
-        function next() {
-            depopulateList();
-            if (document.getElementById("start").value === "") {
-                document.getElementById("start").value = 0;
-            } else {
-                document.getElementById("start").value = parseInt(document.getElementById("start").value, 10) + 10;
-            }
-            if (document.getElementById("stop").value === "") {
-                document.getElementById("stop").value = 10;
-            } else {
-                document.getElementById("stop").value = parseInt(document.getElementById("stop").value, 10) + 10;
-            }
-            // maybe get add an orphaned button too just in case
-            // this is a quick test it probably shouldn't work
-            if ((url_global == "None") && (document.getElementById("url").value != ""))
-                url_global = document.getElementById("url").value;
-            getSubList(url_global);
-        }
-        function back() {
-            depopulateList();
-            if (document.getElementById("start").value === "") {
-                document.getElementById("start").value = 0;
-            } else if ((parseInt(document.getElementById("start").value, 10) - 10) <= 0) {
-                document.getElementById("start").value = 0;
-            } else {
-                document.getElementById("start").value = parseInt(document.getElementById("start").value, 10) - 10;
-            }
-
-            if (document.getElementById("stop").value === "") {
-                document.getElementById("stop").value = 10;
-            } else if ((parseInt(document.getElementById("stop").value, 10) - 10) <= 10) {
-                document.getElementById("stop").value = 10;
-            } else {
-                document.getElementById("stop").value = parseInt(document.getElementById("stop").value, 10) - 10;
-            }
-            if ((url_global == "None") && (document.getElementById("url").value != ""))
-                url_global = document.getElementById("url").value;
-            getSubList(url_global);
-        }
-
-        function depopulateList() {
-            const table = document.getElementById("listing");
-            // now that listing is done it tbody i needs to start form 0, change it in other places too
-            for (var i = 0; i < table.rows.length;) {
-                table.deleteRow(i);
-            }
-        };
-
-        function getSubList(url) {
-            console.log("Querying url: ", url);
-            depopulateList();
-            var start = document.getElementById("start").value;
-            var stop = document.getElementById("stop").value;
-            const table = document.getElementById("listing");
-            fetch("/ytdiff/getsub", {
-                method: "post",
-                headers: {
-                    'Accept': 'application/json',
-                    'Content-Type': 'application/json'
-                },
-
-                //make sure to serialize your JSON body
-                body: JSON.stringify({
-                    url: url,
-                    start: start,
-                    stop: stop
-                })
-            }).then((response) => response.text()).then((text) => {
-                //console.log(text);
-                data = JSON.parse(text);
-                console.log(data);
-                data["rows"].forEach(element => {
-                    /*
-                        # 	Title 	Downloaded 	Available
-                    */
-                    const row = table.insertRow();
-                    const select = row.insertCell(0);
-                    const title = row.insertCell(1);
-                    const download = row.insertCell(2);
-                    const status = row.insertCell(3);
-
-                    let checkbox = document.createElement("input");
-                    checkbox.type = "checkbox";
-                    checkbox.className = "form-check-input me-1";
-                    checkbox.value = "";
-                    checkbox.id = element.id;
-
-                    let link = document.createElement('a');
-                    link.href = element.url;
-                    link.appendChild(document.createTextNode(element.title));
-                    select.appendChild(checkbox);
-                    title.appendChild(link);
-                    download.innerHTML = element.downloaded;
-                    status.innerHTML = element.available;
-                });
-            });
-            url_global = url;
-        };
     </script>
 </body>
 
