--- a/show.html
+++ b/show.html
@@ -28,16 +28,6 @@
             height: 10vh;
             max-height: 10vh;
         }
-
-        .side-nav {
-            height: 90vh;
-            max-height: 90vh;
-        }
-
-        .side-nav button {
-            border-radius: 0;
-            width: 10vw;
-        }
     </style>
 </head>
 
@@ -53,7 +43,7 @@
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-5 ms-4 m-0 p-0">
+            <div class="col-5 ms-4 ps-4 m-0 p-0">
                 <div class="container m-0 p-0 container-table">
                     <table class="table table-responsive">
                         <thead>
@@ -76,25 +66,24 @@
                             <input type="number" class="form-control" placeholder="0" name="start_input" id="start" />
                             <span class="input-group-text">-</span>
                             <input type="number" class="form-control" placeholder="10" name="stop_input" id="stop" />
-                            <button id="next" type="button" onclick="next()" class="btn btn-dark">Next</button>
-                            <button id="back" type="button" onclick="back()" class="btn btn-dark">Back</button>
+                            <button id="next" type="button" onclick="next()" class="btn btn-primary">Next</button>
+                            <button id="back" type="button" onclick="back()" class="btn btn-primary">Back</button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col m-0 p-0 size">
-                <div class="btn-group-vertical float-end side-nav" role="group" aria-label="controls">
-                    <button type="button" class="btn btn btn-dark disabled" disabled></button>
-                    <button id="all" type="button" onclick="select_all()" class="btn btn btn-dark">A</button>
-                    <button id="none" type="button" onclick="select_none()" class="btn btn btn-dark">N</button>
-                    <button id="clear" type="button" onclick="depopulateSubList()" class="btn btn btn-dark">C</button>
-                    <button id="orphan" type="button" onclick="getSubList('None')" class="btn btn btn-dark">O</button>
-                    <button id="next-sub" type="button" onclick="next_sub()" class="btn btn btn-dark">Nx</button>
-                    <button id="back-sub" type="button" onclick="back_sub()" class="btn btn btn-dark">Bc</button>
-                    <button id="dnld" type="button" onclick="download()" class="btn btn btn-dark">D</button>
+            <div class="col m-0 p-0">
+                <div class="btn-group-vertical float-end position-relative top-50 translate-middle m-0 p-0" role="group" aria-label="controls">
+                    <button id="all" type="button" onclick="select_all()" class="btn btn-primary">A</button>
+                    <button id="none" type="button" onclick="select_none()" class="btn btn-primary">N</button>
+                    <button id="clear" type="button" onclick="depopulateSubList()" class="btn btn-primary">C</button>
+                    <button id="orphan" type="button" onclick="getSubList('None')" class="btn btn-primary">O</button>
+                    <button id="next-sub" type="button" onclick="next_sub()" class="btn btn-primary">N</button>
+                    <button id="back-sub" type="button" onclick="back_sub()" class="btn btn-primary">B</button>
+                    <button id="dnld" type="button" onclick="download()" class="btn btn-primary">D</button>
                 </div>
             </div>
-            <div class="col-6 me-4 m-0 p-0">
+            <div class="col-6 me-4 pe-4 m-0 p-0">
                 <div class="container m-0 p-0 container-table">
                     <table class="table table-responsive">
                         <thead>
