just few steps left

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img src="/ytdiff/assets/nav.png" alt="" width="30" height="30"
                     class="d-inline-block align-text-top"><span>-diff</span>
             </a>
-            <a href="ytdiff/showdb" class="link-warning">See DB</a>
+            <a href="ytdiff/dbi" class="link-warning">See DB</a>
         </div>
     </nav>
     <div class="container">
