--- a/dbi.html
+++ b/dbi.html
@@ -10,7 +10,7 @@
     <link href="/ytdiff/assets/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <script src="/ytdiff/assets/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="/ytdiff/assets/socket.io.min.js" crossorigin="anonymous"></script>
-    <script src="/ytdiff/assets/client.js" crossorigin="anonymous"></script>
+    <script src="/ytdiff/assets/dbi.client.js" crossorigin="anonymous"></script>
     <style>
         .container-table {
             height: 80vh;
@@ -43,7 +43,7 @@
     </nav>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-5 ms-4 ps-4 m-0 p-0">
+            <div class="col-5 ms-4 m-0 p-0">
                 <div class="container m-0 p-0 container-table">
                     <table class="table table-responsive">
                         <thead>
@@ -63,27 +63,16 @@
                 <div class="container m-0 p-0 container-counters">
                     <div class="row">
                         <div class="input-group mb-1 mt-3">
-                            <input type="number" class="form-control" placeholder="0" name="start_input" id="start" />
+                            <input type="number" class="form-control" placeholder="0" name="start_input" id="start_main" />
                             <span class="input-group-text">-</span>
-                            <input type="number" class="form-control" placeholder="10" name="stop_input" id="stop" />
-                            <button id="next" type="button" onclick="next()" class="btn btn-primary">Next</button>
-                            <button id="back" type="button" onclick="back()" class="btn btn-primary">Back</button>
+                            <input type="number" class="form-control" placeholder="10" name="stop_input" id="stop_main" />
+                            <button id="next" type="button" onclick="nextMain()" class="btn btn-primary">Next</button>
+                            <button id="back" type="button" onclick="backMain()" class="btn btn-primary">Back</button>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col m-0 p-0">
-                <div class="btn-group-vertical float-end position-relative top-50 translate-middle m-0 p-0" role="group" aria-label="controls">
-                    <button id="all" type="button" onclick="select_all()" class="btn btn-primary">A</button>
-                    <button id="none" type="button" onclick="select_none()" class="btn btn-primary">N</button>
-                    <button id="clear" type="button" onclick="depopulateSubList()" class="btn btn-primary">C</button>
-                    <button id="orphan" type="button" onclick="getSubList('None')" class="btn btn-primary">O</button>
-                    <button id="next-sub" type="button" onclick="next_sub()" class="btn btn-primary">N</button>
-                    <button id="back-sub" type="button" onclick="back_sub()" class="btn btn-primary">B</button>
-                    <button id="dnld" type="button" onclick="download()" class="btn btn-primary">D</button>
-                </div>
-            </div>
-            <div class="col-6 me-4 pe-4 m-0 p-0">
+            <div class="col-6 ms-2 m-0 p-0">
                 <div class="container m-0 p-0 container-table">
                     <table class="table table-responsive">
                         <thead>
@@ -113,17 +102,29 @@
                     </div>
                 </div>
             </div>
+            <div class="col m-0 p-0">
+                <!--Toast-->
+                <div style="position: absolute; top: 10px; right: 10px;">
+                    <div class="toast align-items-bottom" role="alert" aria-live="assertive" aria-atomic="true"
+                        id="notify">
+                        <div class="d-flex">
+                            <div class="toast-body">
 
-        </div>
-    </div>
-    <!--Toast-->
-    <div style="position: absolute; top: 10px; right: 10px;">
-        <div class="toast align-items-bottom" role="alert" aria-live="assertive" aria-atomic="true" id="notify">
-            <div class="d-flex">
-                <div class="toast-body">
-
+                            </div>
+                            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast"
+                                aria-label="Close"></button>
+                        </div>
+                    </div>
                 </div>
-                <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+                <div class="btn-group-vertical top-50 start-50 translate-middle" role="group" aria-label="controls">
+                    <button id="all" type="button" onclick="select_all()" class="btn btn-primary">All</button>
+                    <button id="none" type="button" onclick="select_none()" class="btn btn-primary">None</button>
+                    <button id="clear" type="button" onclick="depopulateList(true)"class="btn btn-primary">Clear</button>
+                    <button id="orphan" type="button" onclick="getOrphans()" class="btn btn-primary">Unls</button>
+                    <button id="next-sub" type="button" onclick="nextSub()" class="btn btn-primary">Next</button>
+                    <button id="back-sub" type="button" onclick="backSub()" class="btn btn-primary">Back</button>
+                    <button id="dnld" type="button" onclick="download_selected()" class="btn btn-primary">Dnld</button>
+                </div>
             </div>
         </div>
     </div>
@@ -131,12 +132,13 @@
         window.onload = init();
         var url_global = "None";
         function init() {
-            document.getElementById("start").value = 0;
-            document.getElementById("stop").value = 10;
+            document.getElementById("start_main").value = 0;
+            document.getElementById("stop_main").value = 10;
             document.getElementById("start_sub").value = 0;
             document.getElementById("stop_sub").value = 10;
             document.getElementById("chunk").value = 10;
             sockSetup();
+            getMainlist(0,10);
         }
     </script>
 
