--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col">
+            <div class="col mb-3">
                 <h3>Controls:</h3>
 
                 <div class="row">
@@ -64,15 +64,16 @@
                     </div>
                     <div class="col">
                         <div class="btn-group" role="group">
-                            <button id="next-sub" type="button" onclick="nextSub()" class="btn btn-primary">Next</button>
-                            <button id="back-sub" type="button" onclick="backSub()" class="btn btn-primary">Back</button>
+                            <button id="next-sub" type="button" onclick="nextSub()"
+                                class="btn btn-primary">Next</button>
+                            <button id="back-sub" type="button" onclick="backSub()"
+                                class="btn btn-primary">Back</button>
                         </div>
                     </div>
                 </div>
                 <div class="row mt-2">
                     <div class="col-7">
                         <div class="btn-group" role="group">
-                            <span class="input-group-text" id="basic-addon1">Select</span>
                             <button id="all" type="button" onclick="select_all()" class="btn btn-primary">All</button>
                             <button id="none" type="button" onclick="select_none()"
                                 class="btn btn-primary">None</button>
@@ -81,14 +82,12 @@
                         </div>
                     </div>
                     <div class="col">
-                        <button id="dnld" type="button" onclick="download_selected()" class="btn btn-primary">Download
-                            Selected</button>
-
+                        <button id="dnld" type="button" onclick="download_selected()"
+                            class="btn btn-primary">Download</button>
                     </div>
                 </div>
             </div>
             <div class="col">
-                <h3 class="m-0">List:</h3>
                 <div class="container-table">
                     <table class="table table-responsive">
                         <thead>
@@ -127,6 +126,16 @@
             document.getElementById("chunk").value = 10;
             sockSetup();
         }
+        document.getElementById("chunk").addEventListener('input', function (evt) {
+            var value = parseInt(this.value, 10);
+            if (value >= 1) {
+                var start = parseInt(document.getElementById("start").value, 10);
+                document.getElementById("stop").value = start + value;
+            }
+            else {
+                this.value = 1;
+            }
+        });
     </script>
 </body>
 
